DYNAMICALLY LOADING MODELS AND CORRESPONDING MARKERS

--- a/edu.dhbw.andobjviewer.ModelChooser/res/values/strings.xml
+++ b/edu.dhbw.andobjviewer.ModelChooser/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     
-    <string name="app_name">AndAR Model Viewer</string>
+    <string name="app_name">Edu-Construct3D</string>
 <string name="select_model_file">Select a model file:</string>
 <string name="android_markt_not_avail">Android market is not available, you need install to OI File manager manually.</string>
 <string name="pickfile_intent_required">You need to install the OI File Manager in order to use this application.</string>
@@ -24,4 +24,5 @@
 <string name="help">Help:</string>
 <string name="custom_model">Custom model:</string>
 <string name="help_file">index.html</string>
+<string name="Names_markers_models">11_16_A,11_17_A,11_18_A</string>
 </resources>
