--- a/edu.dhbw.andobjviewer.ModelChooser/res/values/strings.xml
+++ b/edu.dhbw.andobjviewer.ModelChooser/res/values/strings.xml
@@ -24,5 +24,5 @@
 <string name="help">Help:</string>
 <string name="custom_model">Custom model:</string>
 <string name="help_file">index.html</string>
-<string name="Names_markers_models">11_16_A,11_17_A,11_18_A</string>
+<string name="Names_markers_models">11_16_A,11_17_A,11_18_A,</string>
 </resources>
